--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,25 @@
 html {
     width: 100%;
     height: 100%;
-    
+
     background: linear-gradient(134deg, #16bffd, #cb3966, #a43931);
     background-size: 600% 600%;
 
-    -webkit-animation: breathe 22s ease infinite;
-    -moz-animation: breathe 22s ease infinite;
-    animation: breathe 22s ease infinite;
+    -webkit-animation: breathe 25s ease infinite;
+    -moz-animation: breathe 25s ease infinite;
+    animation: breathe 25s ease infinite;
 }
 
 .navbar {
-    width: 100%;
-    height: 8rem;
+    margin: auto;
+    width: 75%;
+    height: 7rem;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    font-size: 3.5rem;
+    color: white;
 }
 
 .glass {
@@ -26,23 +30,63 @@ html {
     border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
-span{
-    font-size: 4rem;
-    color: white;
-}
 
 @-webkit-keyframes breathe {
-    0%{background-position:10% 0%}
-    50%{background-position:91% 100%}
-    100%{background-position:10% 0%}
+    0% {
+        background-position: 10% 0%
+    }
+
+    50% {
+        background-position: 91% 100%
+    }
+
+    100% {
+        background-position: 10% 0%
+    }
 }
+
 @-moz-keyframes breathe {
-    0%{background-position:10% 0%}
-    50%{background-position:91% 100%}
-    100%{background-position:10% 0%}
+    0% {
+        background-position: 10% 0%
+    }
+
+    50% {
+        background-position: 91% 100%
+    }
+
+    100% {
+        background-position: 10% 0%
+    }
 }
+
 @keyframes breathe {
-    0%{background-position:10% 0%}
-    50%{background-position:91% 100%}
-    100%{background-position:10% 0%}
+    0% {
+        background-position: 10% 0%
+    }
+
+    50% {
+        background-position: 91% 100%
+    }
+
+    100% {
+        background-position: 10% 0%
+    }
+}
+
+.todo{
+    font-size: 3rem;
+    width: 35%;
+    height: auto;
+    text-align: center;
+    margin-bottom: 0.75em;
+}
+
+ul {
+    height: 100%;
+    margin-top: 5rem;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    flex-direction: column;
 }
