--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ html {
     width: 35%;
     height: auto;
     text-align: center;
-    margin-bottom: 0.75em;
+    margin-bottom: 0.85em;
 }
 
 ul {
@@ -90,3 +90,51 @@ ul {
     justify-content:space-between;
     flex-direction: column;
 }
+
+li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
+
+span{
+    margin-left: 2rem;
+}
+
+.imported-button {
+    width: 160px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    margin: 20px;
+    height: 55px;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 50px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    background-image: linear-gradient(
+        to right,
+        #25aae1,
+        #4481eb,
+        #04befe,
+        #3f86ed
+      );
+      box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+  }
+  
+  .imported-button:hover {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .imported-button:focus {
+    outline: none;
+  }
