--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,8 @@ html {
 }
 
 .todo{
-    font-size: 3rem;
+    font-size: 25px;
+    /* font-weight: 600; */
     width: 35%;
     height: auto;
     text-align: center;
@@ -94,7 +95,8 @@ ul {
 li{
     display: flex;
     justify-content: space-between;
-    align-items: center
+    align-items: center;
+    color: whitesmoke;
 }
 
 span{
@@ -137,4 +139,11 @@ span{
   
   .imported-button:focus {
     outline: none;
+  }
+
+  .input-div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
   }
